# RMLStreamer-benchmark

./: .gitignore  README.md  RMLSTREAMER_TWITTER_BENCHMARK.md  docker-compose.rmlstreamer.yml  docker-compose.yml  run_rmlstreamer_benchmark.sh  run_rmlstreamer_example.sh
post-processing/: Cargo.toml
post-processing-scripts/: Dockerfile  package-lock.json  package.json  parseTimes.js
post-processing/src/: main.rs
rml-streamer/controller/: Dockerfile  entrypoint.sh
rml-streamer/flink/: Dockerfile
rml-streamer/flink/mappings/: example_mapping.ttl  twitter_mapping.ttl  twitter_mapping.yml  twitter_mapping_8.ttl  twitter_mapping_8.yml
stream-in/: .gitignore  Dockerfile  run.sh  test-run.sh
stream-in/js/: am-i-alive.js  upload.js
stream-in/rust/: Cargo.toml
stream-in/rust/src/: main.rs
stream-out/: Dockerfile  am-i-alive.js  package-lock.json  package.json  processOutputRMLStreamer.js  processOutputTripleWave.js  run.sh  upload.js
virtual-wall/: .gitignore  README.md  helpers.sh  run-all-tests.sh  run-config.sh  run-single-test.sh  stream-in-deployment.yaml  stream-in-service.yaml  test.csv
virtual-wall/espec/: experiment-specification.yml  kube-flannel.yml  kube.rspec  setup_ipv4.sh  setup_kubernetes_common.sh  setup_kubernetes_master.sh  setup_kubernetes_node.sh
virtual-wall/rmlstreamer/: controller-deployment.yaml  jobmanager-deployment.yaml  jobmanager-service.yaml  stream-out-deployment.yaml  stream-out-service.yaml  taskmanager-deployment.yaml  taskmanager-service.yaml
